--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>WorseThanHitler</title>
+    <title>ThingsThatSucks</title>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
       <div class="inner">
 
         <header>
-          <h1><img alt="WorseThanHitler" src="http://i.imgur.com/MdSuJhV.png"></img></h1>
+          <h1><img alt="ThingsThatSuck" src="http://i.imgur.com/dLcDAtH.png" style="  display:block; margin-left:auto; margin-right:auto;"></img></h1>
         </header>
         <hr>
 		<!--
@@ -39,16 +39,15 @@
 			<div class="container" style="text-align: right;">
 				<a href="mailto:vudoteam@gmail.com">CONTACT</a>
 			</div>
-			<p>Is Obama literally worse than Hitler? How about Justin Bieber?<br>
-					What are the worst things in the world?<br>
-					Find out with WorseThanHitler.<br>
-					WTH is a voting app where you decide what things are the worst!!!</p>
+			<p>You know what sucks? Waking up early.<br>
+					What other things do you find annoying?<br>
+					ThingsThatSuck is a voting app where you decide what things suck the most.</p>
 					
 					<img src="http://i.imgur.com/uOfgh29.png" style="position: absolute;z-index: 100;"></img>
 					<div class="iphone" style="top: 85px;">
 						<div><img src="http://i.imgur.com/XoXtt5W.png"></img></div>
-						<div><img src="http://i.imgur.com/si43NS6.png"></img></div>
-						<div><img src="http://i.imgur.com/LzCWHbF.png"></img></div>
+						<div><img src="http://i.imgur.com/f6pY4wV.png"></img></div>
+						<div><img src="http://i.imgur.com/ikuTxp8.png"></img></div>
 					</div>
         </section>
         
