--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</p>
 				
 			<img src="http://i.imgur.com/uOfgh29.png" style="position: absolute;z-index: 100;"></img>
-			<a href="https://geo.itunes.apple.com/us/app/thingsthatsuck/id972021996?mt=8" style="position:absolute;z-index:101;display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg) no-repeat;width:165px;height:40px;"></a>
+			<a href="https://itunes.apple.com/us/app/thingsthatsuck/id972021996?mt=8&uo=4" target="itunes_store" style="position:absolute;z-index:101;display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg) no-repeat;width:165px;height:40px;"></a>
 			<div class="iphone" style="top: 85px;">
 				<div><img src="http://i.imgur.com/XoXtt5W.png"></img></div>
 				<div><img src="http://i.imgur.com/f6pY4wV.png"></img></div>
